# Timer-NX

./: CMakeLists.txt  Makefile  README.md
build-ninja/: .ninja_deps  .ninja_log  CopyOfCMakeCache.txt  build.ninja  cmake_install.cmake
build-ninja/borealis-lib/: cmake_install.cmake
source/: main.c  main.cpp
